[package]
name = "bybit-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Daniil Pavlovich <layred.dota2@mail.ru>"]
description = "High-performance async Bybit API client for Rust with intelligent session and cache management"
readme = "README.md"

[dependencies]
# HTTP client
reqwest = { version = "0.13.1", features = ["json", "gzip"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Cryptography for API signature
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
# Global state management
once_cell = "1.19"
# Async traits
async-trait = "0.1"
# Logging
log = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
futures = "0.3"
dotenv = "0.15"
# Logging for tests
env_logger = "0.10"